Fix line number mis-alignment by not showing line numbers

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -17,3 +17,7 @@ ol {
 //   white-space: nowrap;
 //   display: list-item; /* TODO: A better way to handle wraping? */
 // }
+
+pre.line-numbers{
+  display: none;
+}
